--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,5 @@ unbind C-b
 
 set-option -g allow-rename off
 set -g default-terminal "screen-256color"
+# clear buffer with C-k
+bind -n C-k send-keys -R \; send-keys C-l \; clear-history
